# Linden

./: .gitignore  BooleanSemantics.v  Chars.v  Groups.v  INSTALL.md  LICENSE  LazyPrefix.v  Makefile  NFA.v  NumericLemmas.v  PikeEquiv.v  PikeSeenEquiv.v  PikeTree.v  PikeTreeSeen.v  PikeVM.v  PikeVMSeen.v  README.md  Regex.v  Semantics.v  Tree.v  Utils.v  _CoqProject  archive.sh  correspondence_notes.md  dune  dune-project  install.sh  linden.opam
Anchors/: Anchors.v  FunctionalUtils.v
Engine/: BooleanSemantics.v  Canonicalize.v  Complexity.v  Correctness.v  FunctionalMemoBT.v  FunctionalPikeVM.v  MemoBT.v  MemoEquiv.v  MemoTree.v  Meta.v  NFA.v  PikeEquiv.v  PikeSeenEquiv.v  PikeSubset.v  PikeTree.v  PikeTreeSeen.v  PikeVM.v  PikeVMSeen.v  Prefix.v  SeenSets.v  Termination.v  TreeRep.v
Rewriting/: Anchors.v  Associativity.v  Chain.v  Distributivity.v  Duplicate.v  Equivalence.v  Equivalence2.v  Examples.v  FailRegex.v  FlatMap.v  ForcedQuant.v  LeavesEquivalence.v  ProofSetup.v  RegexpTree.v  Rewrites.md  RewritingSetup.v  StrictlyNullable.v
Semantics/: Chars.v  ComputeIsTree.v  Example.v  ExampleRegexes.v  Examples.v  Exercise.v  FunctionalSemantics.v  FunctionalUtils.v  GroupMapLemmas.v  Groups.v  Inst.v  Parameters.v  README.md  Regex.v  Semantics.v  StrictSuffix.v  Tree.v
Utils/: CanonicalMaps.v  Tactics.v
WarblreEquiv/: CharDescrCharSet.v  Equiv.v  EquivDef.v  EquivLemmas.v  EquivMain.v  GroupMapLemmas.v  GroupMapMS.v  LKFactorization.v  LWEquivMain.v  LWEquivTMatcher.v  LWEquivTMatcherDef.v  LWEquivTMatcherLemmas.v  LWEquivTree.v  LWEquivTreeLemmas.v  (+12 more)
(+45 files in other folders)
